# tea-ai-pose

./: .gitignore  Justfile  README.md  config.json  config.json.bak.20260224003356  pyproject.toml
configs/datasets/: coco1024.json  coco128.json  coco17.json  coco4k.json  coco8.json
tests/: test_dino_viz.py  test_gpu_auto_tuner.py  test_pipeline_config.py
