[project]
name = "tea-ai"
version = "0.1.0"
description = "Composable AI pipeline workspace"
requires-python = ">=3.12"
dependencies = [
  "pipeline-config",
  "pipeline-runtime-utils",
  "gpu-auto-tuner",
  "dinov3-fetcher",
  "dinov3",
  "detector-grader",
  "detector-infer",
  "detector-train",
  "detector-optimize",
  "pose-dataset-scraper",
  "huggingface-hub>=1.4.1",
  "tqdm>=4.66.0",
  "pytest>=9.0.2",
  "onnx>=1.20.1",
  "onnxslim>=0.1.85",
  "onnxruntime-gpu>=1.24.2",
  "tensorrt-cu12>=10.15.1.29",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pipeline-config = { workspace = true }
pipeline-runtime-utils = { workspace = true }
dinov3-fetcher = { workspace = true }
dinov3 = { workspace = true }
detector-grader = { workspace = true }
detector-infer = { workspace = true }
detector-train = { workspace = true }
detector-optimize = { workspace = true }
pose-dataset-scraper = { workspace = true }
gpu-auto-tuner = { workspace = true }
